--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div id ="main">
 		<div id ="header">
-			<h1><a href="index.html">Мой первый простой сайт</a></h1>
+			<h1><a href="index.html"><p align="right">Мой первый простой сайт</p>></a></h1>
 		</div>
 
 		<div id = "content">
