--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div id ="main">
 		<div id ="header">
-			<h1><a href="index.html"> Мой первый простой сайт </a></h1>
+			<h1><a href="index.html">Мой первый простой сайт </a></h1>
 		</div>
 
 		<div id = "content">
@@ -44,13 +44,13 @@
 
 			</div>
 			<div id ="right">
-				<p>Значимость этих проблем настолько очевидна, что новая модель организационной деятельности представляет собой интересный эксперимент проверки дальнейших направлений развития. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке новых предложений.</p>
+				<p><h2>Значимость</h2> этих проблем настолько очевидна, что новая модель организационной деятельности представляет собой интересный эксперимент проверки дальнейших направлений развития. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке новых предложений.</p>
 
-				<p>Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовки и реализации новых предложений. Повседневная практика показывает, что новая модель организационной деятельности в значительной степени обуславливает создание форм развития. Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации направлений прогрессивного развития. С другой стороны реализация намеченных плановых заданий позволяет оценить значение новых предложений. Таким образом постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации систем массового участия. Разнообразный и богатый опыт реализация намеченных плановых заданий требуют определения и уточнения модели развития.</p>
+				<p>Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовки и реализации новых предложений. Повседневная практика показывает, что новая модель организационной деятельности в значительной степени обуславливает создание форм развития. Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий влечет за собой процесс внедрения и модернизации направлений прогрессивного развития.</p>
 
-				<p>Задача организации, в особенности же консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности играет важную роль в формировании форм развития. Разнообразный и богатый опыт постоянный количественный рост и сфера нашей активности требуют от нас анализа форм развития. Не следует, однако забывать, что начало повседневной работы по формированию позиции играет важную роль в формировании позиций, занимаемых участниками в отношении поставленных задач. Не следует, однако забывать, что реализация намеченных плановых заданий в значительной степени обуславливает создание дальнейших направлений развития. Идейные соображения высшего порядка, а также рамки и место обучения кадров позволяет выполнять важные задания по разработке позиций, занимаемых участниками в отношении поставленных задач.</p>
+				<p>Задача организации, в особенности же консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности играет важную роль в формировании форм развития. Разнообразный и богатый опыт постоянный количественный рост и сфера нашей активности требуют от нас анализа форм развития. Не следует, однако забывать, что начало повседневной работы по формированию позиции играет важную роль в формировании позиций, занимаемых участниками в отношении поставленных задач.</p>
 
-				<p>Повседневная практика показывает, что укрепление и развитие структуры влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям. Значимость этих проблем настолько очевидна, что консультация с широким активом влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. Значимость этих проблем настолько очевидна, что укрепление и развитие структуры играет важную роль в формировании форм развития. Идейные соображения высшего порядка, а также консультация с широким активом играет важную роль в формировании дальнейших направлений развития. Разнообразный и богатый опыт постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание форм развития.</p>
+				<p>Повседневная практика показывает, что укрепление и развитие структуры влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям. Значимость этих проблем настолько очевидна, что консультация с широким активом влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач.</p>
 			</div>
 			<div style="clear: both;"></div>
 			<div id = "footer">&copy; Ширманов Константин Вячеславович</div>
